Added border aroudn heading element

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
 <body>
     <main>
-        <h2 id="result">&InvisibleComma;</h2>
-        <p id="operator"></p>
+        <div class="heading">
+            <h2 id="result">&InvisibleComma;</h2>
+            <p id="operator"></p>
+        </div>
         <p class="button" id="7">7</p>
         <p class="button" id="8">8</p>
         <p class="button" id="9">9</p>
